formatting and time test

--- a/Yandex.Contest.20/B. Card Counter.ipynb
+++ b/Yandex.Contest.20/B. Card Counter.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "На стол в ряд выложены карточки, на каждой карточке написано натуральное число. За один ход разрешается взять карточку либо с левого, \n",
     "либо с правого конца ряда. Всего можно сделать k  ходов. Итоговый счет равен сумме чисел на выбранных карточках. \n",
-    "Определите, какой максимальный счет можно получить по итогам игры. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
+    "Определите, какой максимальный счет можно получить по итогам игры.\n",
     "\n",
     "Формат ввода\n",
     "В первой строке записано число карточек n (1≤n≤10**5). Во второй строке записано число ходов k (1≤k≤n). В третьей строке через пробел даны числа, записанные на карточках. i-е по счету число записано на i-й слева карточке. Все числа натуральные и не превосходят 10**4.\n",
@@ -49,6 +49,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "fe47c329-b9d6-4997-aa01-564e6a3bbec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cases = [\n",
+    "\"\"\"\n",
+    "7\n",
+    "3\n",
+    "5 8 2 1 3 4 11\n",
+    "\n",
+    "24\n",
+    "\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
+    "5\n",
+    "5\n",
+    "1 2 3 4 5\n",
+    "\n",
+    "15\n",
+    "\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
+    "7\n",
+    "4\n",
+    "1 1 9 2 2 2 6\n",
+    "\n",
+    "17\n",
+    "\"\"\" \n",
+    "]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1d73e298-a0be-47e3-af6b-094c7ecb9cba",
    "metadata": {},
@@ -68,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "id": "26a31501-c6c0-4bd4-9596-162ff8c9b010",
    "metadata": {},
    "outputs": [],
@@ -85,13 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "3df9cf37-c3fb-49f4-809a-f4ed26c62164",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "id": "e172d5ed-2c60-485b-ac45-537376417a19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(inp):\n",
-    "    inp_lines = inp.split('\\n')[1:-1]\n",
+    "def test(case):\n",
+    "    inp_lines = case.split('\\n')[1:-2]\n",
     "    n = int(inp_lines[0])\n",
     "    k = int(inp_lines[1])\n",
     "    cards = list(map(int, inp_lines[2].split()))\n",
@@ -100,40 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4868ce2d-74fa-4896-87f8-fcd88d5e052c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1368fe4-e2f5-4a4c-8dd9-8d8fede7b2c0",
-   "metadata": {},
-   "source": [
-    "<h3>Тест 1</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "ac8d8b95-8c5d-408e-beb8-ded1856fc24c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "case =\"\"\"\n",
-    "7\n",
-    "3\n",
-    "5 8 2 1 3 4 11\n",
-    "\n",
-    "24\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "8e7e0dd5-9a78-46a4-ad09-08dc9329da7d",
+   "execution_count": 118,
+   "id": "41e2dcb6-3760-42b6-a278-584f55d4ba92",
    "metadata": {},
    "outputs": [
     {
@@ -145,37 +155,13 @@
     }
    ],
    "source": [
-    "test(case)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6cc1583-ebf3-4ea6-b310-236efd66f6aa",
-   "metadata": {},
-   "source": [
-    "<h3>Тест 2</h3>"
+    "test(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "ef744881-d541-444b-96e4-bed1b919296a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "case =\"\"\"\n",
-    "5\n",
-    "5\n",
-    "1 2 3 4 5\n",
-    "\n",
-    "15\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "34733675-54c6-4b46-92da-13adce6552ff",
+   "execution_count": 119,
+   "id": "18e6a330-b0b1-48d6-86d9-8498581a612c",
    "metadata": {},
    "outputs": [
     {
@@ -187,37 +173,13 @@
     }
    ],
    "source": [
-    "test(case)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cef6125e-3ea6-45a2-a8fe-20296e9235da",
-   "metadata": {},
-   "source": [
-    "<h3>Тест 3</h3>"
+    "test(cases[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "2b2637b4-5463-42bc-b5f5-2be69a64678e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "case=\"\"\"\n",
-    "7\n",
-    "4\n",
-    "1 1 9 2 2 2 6\n",
-    "\n",
-    "17\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "41e2dcb6-3760-42b6-a278-584f55d4ba92",
+   "execution_count": 120,
+   "id": "b8a43b90-7e32-4b0c-b671-6ae28ca65c4a",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +191,7 @@
     }
    ],
    "source": [
-    "test(case)"
+    "test(cases[2])"
    ]
   },
   {
@@ -237,14 +199,89 @@
    "id": "d2325847-d21c-400f-9c5b-02e92615c92c",
    "metadata": {},
    "source": [
-    "Но это не оптимальный алгоритм так как на каждом шаге вычисляется сумма. Он имеет сложность O(K*(N-K)).\n",
+    "Но это не оптимальный алгоритм так как на каждом шаге вычисляется сумма. Он имеет сложность O(K*(N-K))."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "ac6dc41b-0f82-40a4-b869-d548cca6980a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def make_big_case(n):\n",
+    "    k = n // 2\n",
+    "    cards = [str(random.randint(0, 1000)) for _ in range(n)]\n",
+    "    return  (\n",
+    "        '\\n' +\n",
+    "        str(n) + '\\n' +\n",
+    "        str(k) + '\\n' + \n",
+    "        ' '.join(cards) + '\\n\\n'\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "bafd49d7-8a19-4534-98f3-4542ef88e83b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "def test_big_case(case):\n",
+    "    start = time.process_time()\n",
+    "    test(case)\n",
+    "    print('%0.2f sec' % ( time.process_time() - start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "b15447a9-7e1b-468b-a39c-40566b1ad586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10_000\n",
+    "big_case_1 = make_big_case(n)\n",
+    "big_case_2 = make_big_case(2*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "a471dc1c-ce8f-4588-823f-3ad235cfb321",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2523541\n",
+      "0.27 sec\n",
+      "5027999\n",
+      "1.06 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c3c4fba2-023b-45f4-ae63-a61efb96fe65",
+   "metadata": {},
+   "source": [
     "На самом деле на каждом шаге нужно просто корректировать сумму на те две карточки которые меняются. \n",
     "Очень важно правильно проконтролировать индексы."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 125,
    "id": "59711433-daa2-4fa3-a3fb-239884eeebfc",
    "metadata": {},
    "outputs": [],
@@ -261,40 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb66e3ff-4096-45f7-8cec-8ebbe6ad3275",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "01a559ff-f34b-412e-b16b-b0ca51ddf6e6",
-   "metadata": {},
-   "source": [
-    "<h3>Тест 1</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "078453d3-6fde-40f6-b988-7bade054da71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "case =\"\"\"\n",
-    "7\n",
-    "3\n",
-    "5 8 2 1 3 4 11\n",
-    "\n",
-    "24\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "03f22d41-1e2c-46f7-9a0e-8bcbf4ead5b4",
+   "execution_count": 126,
+   "id": "82a475fd-d793-49dc-8396-4d45b41d8f26",
    "metadata": {},
    "outputs": [
     {
@@ -306,40 +311,14 @@
     }
    ],
    "source": [
-    "test(case)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be7617a5-703c-4d71-a8a0-0c8e425ca074",
-   "metadata": {},
-   "source": [
-    "<h3>Тест 2</h3>"
+    "test(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "50119db1-479f-46aa-a8ae-eb57da20179e",
+   "execution_count": 127,
+   "id": "2e18b159-0d5f-4710-b191-d51a5f4679a0",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "case =\"\"\"\n",
-    "5\n",
-    "5\n",
-    "1 2 3 4 5\n",
-    "\n",
-    "15\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "242a56f3-3a67-4d90-a8ae-482a5190297a",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -350,37 +329,13 @@
     }
    ],
    "source": [
-    "test(case)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f12dad10-8f07-4b48-ae55-c2a53563d205",
-   "metadata": {},
-   "source": [
-    "<h3>Тест 3</h3>"
+    "test(cases[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "5339f693-5ca5-4e4f-962c-58bb3fae3ec2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "case=\"\"\"\n",
-    "7\n",
-    "4\n",
-    "1 1 9 2 2 2 6\n",
-    "\n",
-    "17\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "d8db564f-37cd-40aa-b7fc-c407f1fb534c",
+   "execution_count": 128,
+   "id": "de2c5800-e9fc-44ad-8330-d0511073f049",
    "metadata": {},
    "outputs": [
     {
@@ -392,13 +347,77 @@
     }
    ],
    "source": [
-    "test(case)"
+    "test(cases[2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d350f93f-fb1b-4615-8557-424f5aed406d",
+   "id": "56d1c124-bb76-44a5-8778-d4fee0b6cab4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "40ad568f-5f26-461d-a440-dc645c1dbda3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2523541\n",
+      "0.00 sec\n",
+      "5027999\n",
+      "0.00 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "60d855b3-725e-4fe3-a9bf-bf0cdbd8ecea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1_000_000\n",
+    "big_case_1 = make_big_case(n)\n",
+    "big_case_2 = make_big_case(2*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "a3ca09b6-b0e1-4382-98eb-f70cd9b10b16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250381181\n",
+      "0.28 sec\n",
+      "500703475\n",
+      "0.59 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c583949a-0b67-477b-9d51-b0aed6cf5b77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -406,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b5e180-7a83-479f-b24d-4f56fab2b5db",
+   "id": "8bf0e0d0-25c1-482e-8cd8-ace7e4a80483",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -414,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e7b73a6-bfe0-4460-86e7-8eb843bf8b79",
+   "id": "d61bee25-5150-453a-8f34-d95dc4734f9d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -422,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82a475fd-d793-49dc-8396-4d45b41d8f26",
+   "id": "404cb9fb-12d5-4e34-b189-61e52bd6bf2a",
    "metadata": {},
    "outputs": [],
    "source": []
