--- a/Yandex.Contest.20/C. Status 200.ipynb
+++ b/Yandex.Contest.20/C. Status 200.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "780fc71d",
+   "cell_type": "markdown",
+   "id": "a37deab4-ff71-4ad9-b126-7562f3d550de",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Вам дан массив натуральных чисел a[i]. Найдите число таких пар элементов (a[i], a[j]), где ∣a[i] − a[j]∣ % 200 == 0 и i < j.\n",
-    "Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
+    "<h1>Статус 200</h1>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "1beac912-7e3f-4d37-a0d0-6e1158cfb442",
+   "metadata": {},
+   "source": [
+    "Вам дан массив натуральных чисел a[i]. Найдите число таких пар элементов (a[i], a[j]), где ∣a[i] − a[j]∣ % 200 == 0 и i<j.\n",
     "\n",
     "Формат ввода\n",
     "В первой строке дан размер массива n (1≤n≤200000).\n",
@@ -17,17 +21,7 @@
     "\n",
     "Формат вывода\n",
     "Выведите единственное число — количество пар, подходящих под указанное выше условие.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "838c30c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
+    "\n",
     "Пример 1\n",
     "Ввод\n",
     "5\n",
@@ -41,30 +35,34 @@
     "1000000\n",
     "Вывод\n",
     "0\n",
+    "\n",
     "Пример 3\n",
     "Ввод\n",
     "3\n",
     "2022 2020 2021\n",
     "Вывод\n",
-    "0\n",
-    "\"\"\""
+    "0"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8e644a1",
+   "cell_type": "markdown",
+   "id": "8169e40b-441d-4d97-8f71-048d36cab171",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Сначала напишем наивный алгоритм где будем перебирать все указанные пары. Его сложность O(N*logN)\n",
-    "\"\"\""
+    "<h2>Решение</h2>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "23abe751-86b5-440a-849d-fc83735e1949",
+   "metadata": {},
+   "source": [
+    "Сначала напишем наивный алгоритм, где будем перебирать все указанные пары. Его сложность O(N**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "1cf38eb1",
    "metadata": {},
    "outputs": [],
@@ -83,13 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "7311f1a9-7581-4c97-973b-9890b39197ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "628acd62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(inp):\n",
-    "    inp = inp.split('\\n')[1:-1]\n",
+    "def test(case):\n",
+    "    inp = case.split('\\n')[1:-2]\n",
     "    n = int(inp[0])\n",
     "    numbers = list(map(int, inp[1].split()))\n",
     "    print(get_number_of_good_pairs(numbers))"
@@ -97,20 +103,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "b4592d92-122f-4eba-818c-a315776724c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "32431fbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp = \"\"\"\n",
+    "cases = [\n",
+    "\"\"\"\n",
     "5\n",
     "203 404 204 200 403\n",
-    "\"\"\""
+    "\n",
+    "2\n",
+    "\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
+    "1\n",
+    "1000000\n",
+    "\n",
+    "0\n",
+    "\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
+    "3\n",
+    "2022 2020 2021\n",
+    "\n",
+    "0\n",
+    "\"\"\"\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "8c0b634c",
    "metadata": {},
    "outputs": [
@@ -123,25 +155,12 @@
     }
    ],
    "source": [
-    "test(inp)"
+    "test(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "07a4564a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inp = \"\"\"\n",
-    "1\n",
-    "1000000\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "dd6ce332",
    "metadata": {},
    "outputs": [
@@ -154,25 +173,12 @@
     }
    ],
    "source": [
-    "test(inp)"
+    "test(cases[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ab9b7fb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inp = \"\"\"\n",
-    "3\n",
-    "2022 2020 2021\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "id": "18efd517",
    "metadata": {},
    "outputs": [
@@ -185,46 +191,95 @@
     }
    ],
    "source": [
-    "test(inp)"
+    "test(cases[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ab1b309c",
+   "execution_count": 47,
+   "id": "ce18021d-7cf1-4383-b274-2b406b607c3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def make_big_case(n):\n",
+    "    a = [str(random.randint(0, 1000)) for _ in range(n)]\n",
+    "    return  (\n",
+    "        '\\n' +\n",
+    "        str(n) + '\\n' + \n",
+    "        ' '.join(a) + '\\n\\n'\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e167fa25-9d17-46cb-84e2-32e6f19ca533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "def test_big_case(case):\n",
+    "    start = time.process_time()\n",
+    "    test(case)\n",
+    "    print('%0.2f sec' % ( time.process_time() - start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "946487d3-57c5-41fb-98d7-34787d2ee388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10_000\n",
+    "big_case_1 = make_big_case(n)\n",
+    "big_case_2 = make_big_case(2*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "328e3c53-6469-4beb-b7d8-4f44fa546a88",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nтеперь попробуем учесть тот факт что у элементов таких пар будет одинаковый остаток от деления на 200\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79455\n",
+      "3.86 sec\n",
+      "317686\n",
+      "16.39 sec\n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "теперь попробуем учесть тот факт что у элементов таких пар будет одинаковый остаток от деления на 200\n",
-    "постоим массив с остатками от деления на 200\n",
-    "теперь для каждого уникального значения найдем сколько элементов с ним есть\n",
-    "если таких значений 2 - то пара 1, если 3 - то еще плюс 2 пары, если 4 - то еще плюс 3 пары и тд\n",
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "6bae5336-f033-494c-9b38-041c93398faf",
+   "metadata": {},
+   "source": [
+    "Теперь попробуем учесть тот факт, что у элементов таких пар будет одинаковый остаток от деления на 200.\n",
+    "Построим массив с остатками от деления на 200. Теперь для каждого уникального значения найдем сколько элементов с ним есть.\n",
+    "Если таких значений 2 - то пара одна, если 3 - то еще плюс две пары, если 4 - то еще плюс три пары и т. д.\n",
     "\n",
-    "Теперь сложность линейная O(N)\n",
-    "\"\"\""
+    "Теперь сложность линейная - O(N)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "id": "141966e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_number_of_good_pairs(numbers) -> int:\n",
-    "    \n",
     "    num_pairs = 0\n",
     "    \n",
     "    a = numbers\n",
@@ -243,20 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f8af62bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inp = \"\"\"\n",
-    "5\n",
-    "203 404 204 200 403\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "id": "8ef4effd",
    "metadata": {},
    "outputs": [
@@ -269,25 +311,12 @@
     }
    ],
    "source": [
-    "test(inp)"
+    "test(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "30f05f21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inp = \"\"\"\n",
-    "1\n",
-    "1000000\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "fe85df72",
    "metadata": {},
    "outputs": [
@@ -300,25 +329,12 @@
     }
    ],
    "source": [
-    "test(inp)"
+    "test(cases[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "19538516",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inp = \"\"\"\n",
-    "3\n",
-    "2022 2020 2021\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "id": "06c8bbaf",
    "metadata": {},
    "outputs": [
@@ -331,13 +347,69 @@
     }
    ],
    "source": [
-    "test(inp)"
+    "test(cases[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "121eaaa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "249364\n",
+      "0.02 sec\n",
+      "999067\n",
+      "0.00 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e50da172-296c-4b55-b48e-9ea14da48cdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1_000_000\n",
+    "big_case_1 = make_big_case(n)\n",
+    "big_case_2 = make_big_case(2*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d6bff202-1e29-4a22-879c-d445afbb0f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2500557110\n",
+      "0.38 sec\n",
+      "10001638136\n",
+      "0.69 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121eaaa6",
+   "id": "8be015ff-ae2a-4320-9ce2-93427e345e79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -359,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
