--- a/Yandex.Contest.20/D. Matrix Resurrection.ipynb
+++ b/Yandex.Contest.20/D. Matrix Resurrection.ipynb
@@ -1,17 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb18aa62",
+   "cell_type": "markdown",
+   "id": "a457541f-2ba1-4184-b4c7-5262531cba64",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
+    "<h1>Matrix Resurrection</h1>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "16de9360-9115-4244-af9f-c49b673c3cdf",
+   "metadata": {},
+   "source": [
     "Вам дана матрица из n  строк и m столбцов, заполненная натуральными числами. По матрице можно перемещаться, \n",
     "из клетки можно уходить только в соседнюю по стороне клетку, переходы по диагонали, а также выход за границу матрицы запрещены.\n",
     "Ваша задача — найти наиболее длинный возрастающий путь в матрице. Путь возрастающий, если значения в посещаемых клетках \n",
-    "строго возрастают от начала пути к его концу. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
+    "строго возрастают от начала пути к его концу.\n",
     "\n",
     "Формат ввода\n",
     "В первой строке даны два числа, описывающие размер матрицы — n, m (1≤n,m≤10**3). В следующих n строках записана сама матрица. \n",
@@ -41,25 +46,62 @@
     "10 9\n",
     "9 11\n",
     "Вывод\n",
-    "2\n",
-    "\"\"\""
+    "2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "955fac91",
+   "execution_count": 113,
+   "id": "842430e5-f6a9-432a-a267-c1c264c19f33",
    "metadata": {},
    "outputs": [],
    "source": [
+    "cases = [\n",
     "\"\"\"\n",
-    "будем решать рекурсивно. сделаем цикл по всем клеткам и будем брать в качестве отправного пути и заполнять массив visited\n",
-    "\"\"\""
+    "2 3\n",
+    "10 8 5\n",
+    "10 5 4\n",
+    "\n",
+    "4\n",
+    "\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
+    "2 2\n",
+    "1 1\n",
+    "1 1\n",
+    "\n",
+    "1\n",
+    "\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
+    "2 2\n",
+    "10 9\n",
+    "9 11\n",
+    "\n",
+    "2\n",
+    "\"\"\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d65a4ef-2e0e-4eb3-ba6f-57247b1b631a",
+   "metadata": {},
+   "source": [
+    "<h2>Решение</h2>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ca837f67-f6fd-437a-804d-d9c46a840b27",
+   "metadata": {},
+   "source": [
+    "Будем решать рекурсивно. Сделаем цикл по всем клеткам и будем брать в качестве отправного пути и заполнять массив visited"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "id": "ec08edc1",
    "metadata": {},
    "outputs": [],
@@ -123,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 115,
    "id": "d9e01547",
    "metadata": {},
    "outputs": [],
@@ -134,28 +176,40 @@
     "    matrix = []\n",
     "    for i in range(n):\n",
     "        matrix.append(list(map(int, inp[i+1].split())))\n",
-    "    return matrix"
+    "    return matrix\n",
+    "\n",
+    "def test(case):\n",
+    "    matrix = read_matrix(case)\n",
+    "    expected = int(case.split('\\n')[-2])\n",
+    "    actual = get_longest_increasing_path(matrix)\n",
+    "    print('passed' if expected == actual else 'failed')\n",
+    "    print('\\texpected', expected)\n",
+    "    print('\\tactual  ', actual)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "id": "3098100f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "passed\n",
+      "\texpected 4\n",
+      "\tactual   4\n"
+     ]
+    }
+   ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 3\n",
-    "10 8 5\n",
-    "10 5 4\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 117,
    "id": "c07bc42e",
    "metadata": {},
    "outputs": [
@@ -163,122 +217,151 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "passed\n",
+      "\texpected 1\n",
+      "\tactual   1\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "test(cases[1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 118,
    "id": "3cf11241",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "passed\n",
+      "\texpected 2\n",
+      "\tactual   2\n"
+     ]
+    }
+   ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 2\n",
-    "1 1\n",
-    "1 1\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "c7f872ca",
+   "execution_count": 119,
+   "id": "e45e137f-dcca-4df9-ad1f-927f83d9010f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def make_big_case(n):\n",
+    "    result = ['',str(n) + ' ' + str(n)]\n",
+    "    for i in range(n):\n",
+    "        result.append(' '.join([str(random.randint(0, n)) for _ in range(n)]))\n",
+    "    result.append('-1')\n",
+    "    result.append('')\n",
+    "    return '\\n'.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "5ee7890c-5e86-4e57-8e36-9479d57c9459",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "\n",
+      "4 4\n",
+      "0 1 2 3\n",
+      "0 3 2 4\n",
+      "1 4 4 0\n",
+      "2 4 1 4\n",
+      "-1\n",
+      "\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "7fd05dbe",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "inp =\"\"\"\n",
-    "2 2\n",
-    "10 9\n",
-    "9 11\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "print(make_big_case(4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "493f98dc",
+   "execution_count": 121,
+   "id": "ce9e5396-9a4d-4e8a-8a03-930200f48701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "def test_big_case(case):\n",
+    "    start = time.process_time()\n",
+    "    test(case)\n",
+    "    print('%0.2f sec' % ( time.process_time() - start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "29063fcd-1f36-4cd2-96d7-0741cde0af86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=100\n",
+    "big_case_1 = make_big_case(n)\n",
+    "big_case_2 = make_big_case(2*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "75299a50-600b-4b8c-aeef-4c5f9f8c0c73",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   12\n",
+      "0.23 sec\n",
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   14\n",
+      "1.31 sec\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "dc4e2d8b",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "inp =\"\"\"\n",
-    "1 1\n",
-    "1\n",
-    "\"\"\""
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "036369e9",
+   "cell_type": "raw",
+   "id": "1fd2004c-a743-4e88-a440-99ef0953daa7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
    "source": [
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "Но это неоптимальное решение, на самом деле нам не нужен массив visited, потому что мы никогда не вернемся в предыдущую точку,\n",
+    "ведь путь должен быть возрастающий."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e88dbcc6",
+   "id": "4f7a6858-7a81-4588-9805-8fe8f58a3e82",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# это неоптимальное решение, на самом деле нам не нужен массив visited, потому что мы никогда не вернемся в предыдущую точку,\n",
-    "# ведь путь должен быть возрастающий"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 124,
    "id": "bff9ca56",
    "metadata": {},
    "outputs": [],
@@ -328,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 125,
    "id": "2ade946a",
    "metadata": {},
    "outputs": [
@@ -336,23 +419,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "passed\n",
+      "\texpected 4\n",
+      "\tactual   4\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 3\n",
-    "10 8 5\n",
-    "10 5 4\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 126,
    "id": "b1adf45d",
    "metadata": {},
    "outputs": [
@@ -360,23 +439,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "passed\n",
+      "\texpected 1\n",
+      "\tactual   1\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 2\n",
-    "1 1\n",
-    "1 1\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 127,
    "id": "4afcb51b",
    "metadata": {},
    "outputs": [
@@ -384,56 +459,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "passed\n",
+      "\texpected 2\n",
+      "\tactual   2\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 2\n",
-    "10 9\n",
-    "9 11\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "19f63ac3",
+   "execution_count": 128,
+   "id": "ccd9fbcc-e9a9-4df2-9922-94879aab8b84",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   12\n",
+      "0.05 sec\n",
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   14\n",
+      "0.17 sec\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "1 1\n",
-    "10\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "f00387e0",
+   "execution_count": 129,
+   "id": "e4f12675-3b59-4545-b42d-bcc459f03626",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#чтобы не пересчитывать заново для клеток для которых уже было посчитано, будем сохранять результаты в матрице dp"
+    "n=1000\n",
+    "big_case_1 = make_big_case(n)\n",
+    "big_case_2 = make_big_case(2*n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 130,
+   "id": "1ea4293d-b3d9-40bb-89d0-5f82890ef479",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   14\n",
+      "5.20 sec\n",
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   16\n",
+      "18.53 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a47fb27a-dce9-4553-a25c-462007a18339",
+   "metadata": {},
+   "source": [
+    "Чтобы не пересчитывать заново для клеток для которых уже было посчитано, будем сохранять результаты в матрице dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "id": "12afbb3b",
    "metadata": {},
    "outputs": [],
@@ -489,103 +599,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "0228b5f6",
+   "execution_count": 132,
+   "id": "762d613d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "passed\n",
+      "\texpected 4\n",
+      "\tactual   4\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 3\n",
-    "10 8 5\n",
-    "10 5 4\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "4f31dac1",
+   "execution_count": 133,
+   "id": "49bf9e48-f022-4f4a-be5e-3b2cd74cc60e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "passed\n",
+      "\texpected 1\n",
+      "\tactual   1\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 2\n",
-    "1 1\n",
-    "1 1\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "130affd9",
+   "execution_count": 134,
+   "id": "3b4c666c-9a16-47d1-a390-6d4a114de72b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "passed\n",
+      "\texpected 2\n",
+      "\tactual   2\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "2 2\n",
-    "10 9\n",
-    "9 11\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test(cases[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "937f6147",
+   "execution_count": 135,
+   "id": "b2897ea4-9d58-4484-a49d-4271d945c8c9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   14\n",
+      "1.42 sec\n",
+      "failed\n",
+      "\texpected -1\n",
+      "\tactual   16\n",
+      "5.45 sec\n"
      ]
     }
    ],
    "source": [
-    "inp =\"\"\"\n",
-    "1 1\n",
-    "10\n",
-    "\"\"\"\n",
-    "matrix = read_matrix(inp)\n",
-    "print(get_longest_increasing_path(matrix))"
+    "test_big_case(big_case_1)\n",
+    "test_big_case(big_case_2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "374593f3-995a-4b7b-a2fb-77f17b0f6f45",
+   "metadata": {},
+   "source": [
+    "Теперь сложность O(N**2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "762d613d",
+   "id": "76345a6f-ec99-4e84-9954-e25ab548a606",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -607,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
