--- a/Yandex.Contest.20/E. Roman.ipynb
+++ b/Yandex.Contest.20/E. Roman.ipynb
@@ -1,13 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17d677b7",
+   "cell_type": "markdown",
+   "id": "03aae29e-1dd9-460c-bf29-4f76bfca1ae4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
+    "<h1>Римлянин</h1>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "dbfd607e-1ec7-42f7-8ea6-6c3a62cb99a7",
+   "metadata": {},
+   "source": [
     "Вам дано число, записанное римскими цифрами. Получите это же число в обычной записи (арабскими цифрами).\n",
     "Римская запись чисел может включать следующие символы:\n",
     "\n",
@@ -23,11 +28,9 @@
     "Цифры ’V’, ’L’ и ’D’ нельзя использовать более одного раза во всей записи числа.\n",
     "Обыкновенно цифры записывают по убыванию слева направо. Например, число 350 будет записано как ’CCCL’.\n",
     "Однако есть исключения:\n",
-    "\n",
     "Чтобы получить ’4’ или ’9’, надо поставить ’I’ перед ’V’ или ’X’ соответственно\n",
     "Чтобы получить ’40’ или ’90’, надо поставить ’X’ перед ’L’ или ’C’.\n",
     "Чтобы получить ’400’ или ’900’, надо поставить ’C’ перед ’D’ или ’M’.\n",
-    "Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
     "\n",
     "Формат ввода\n",
     "В единственной строке дана запись числа римскими цифрами. Длина записи не превосходит 15.\n",
@@ -39,36 +42,41 @@
     "VIV\n",
     "Вывод\n",
     "-1\n",
+    "\n",
     "Пример 2\n",
     "Ввод\n",
     "II\n",
     "Вывод\n",
     "2\n",
+    "\n",
     "Пример 3\n",
     "Ввод\n",
     "MCMLXI\n",
     "Вывод\n",
-    "1961\n",
-    "\"\"\""
+    "1961"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e1c865c",
+   "cell_type": "markdown",
+   "id": "1017f5ae-a0eb-4808-aa81-2d71b1f5641a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
+    "<h2>Решение</h2>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "7f47a947-55a2-4c96-a39a-042f02b94939",
+   "metadata": {},
+   "source": [
     "будем проходить по элементам слева направо и смотреть их значения. Если встретится I, X или С, будем так же смотреть следующий\n",
     "элемент. Также будем подсчитывать количество элементов на предмет наличия более 3х раз подряд для I, X, C, M или более одного раза \n",
-    "для V, L, D. Важно следить чтобы они следовали в порядке убывания.\n",
-    "\"\"\""
+    "для V, L, D. Важно следить чтобы они следовали в порядке убывания."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "257b8f1a",
    "metadata": {},
    "outputs": [],
@@ -132,66 +140,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "84920beb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class tester:\n",
-    "    \n",
-    "    def test_all(self, *cases, f):\n",
-    "        for i, case in enumerate(cases):\n",
-    "            print('case', i+1)\n",
-    "            self.test(case, f)        \n",
-    "    \n",
-    "    def test(self, case, f):\n",
-    "        try:\n",
-    "            lines = case.split(\"\\n\")[1:-1]\n",
-    "            inp = lines[0]\n",
-    "            outp = int(lines[1])\n",
-    "\n",
-    "            if f(inp) == outp:\n",
-    "                print('pass')\n",
-    "            else:\n",
-    "                print('fail')\n",
-    "        except e:\n",
-    "            print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "4ebe3319",
    "metadata": {},
    "outputs": [],
    "source": [
-    "case1 = \"\"\"\n",
+    "cases = [\n",
+    "\"\"\"\n",
     "VIV\n",
     "-1\n",
     "\"\"\"\n",
-    "case2=\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
     "II\n",
     "2\n",
     "\"\"\"\n",
-    "case3=\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
     "MCMLXI\n",
     "1961\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "0f3448c7",
+   "execution_count": 7,
+   "id": "84920beb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = tester()"
+    "def test(case):\n",
+    "    lines = case.split(\"\\n\")[1:-1]\n",
+    "    inp = lines[0]\n",
+    "    expected = int(lines[1])\n",
+    "    actual = convert_to_arabic(inp)\n",
+    "    if expected == actual:\n",
+    "        print('pass')\n",
+    "    else:\n",
+    "        print('fail')\n",
+    "    print('\\texpected', expected)\n",
+    "    print('\\tactual  ', actual)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
+   "id": "0f3448c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pass\n",
+      "\texpected -1\n",
+      "\tactual   -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(cases[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "1818f5fe",
    "metadata": {},
    "outputs": [
@@ -199,26 +213,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\n",
       "pass\n",
-      "case 2\n",
-      "pass\n",
-      "case 3\n",
-      "pass\n"
+      "\texpected 2\n",
+      "\tactual   2\n"
      ]
     }
    ],
    "source": [
-    "t.test_all(case1, case2, case3, f=convert_to_arabic)"
+    "test(cases[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "de02386a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pass\n",
+      "\texpected 1961\n",
+      "\tactual   1961\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(cases[2])"
+   ]
   },
   {
    "cell_type": "code",
@@ -253,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
