--- a/Yandex.Contest.20/K. Breaking Pattern.ipynb
+++ b/Yandex.Contest.20/K. Breaking Pattern.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 1,
    "id": "17b2170c-1b79-4f03-a218-0ce701c59999",
    "metadata": {},
    "outputs": [],
@@ -118,15 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 2,
    "id": "8a6188dd-a7d8-49d5-b4a3-ba89fff75559",
    "metadata": {},
    "outputs": [],
    "source": [
-    "count = 0\n",
     "def string_matches_template(s: str, template: str) -> bool:\n",
-    "    global count\n",
-    "    count += 1\n",
     "    if s == '':\n",
     "        if template == '':\n",
     "            return True\n",
@@ -160,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 3,
    "id": "b0cb3949-6573-4c2b-b01d-c01635426403",
    "metadata": {},
    "outputs": [],
@@ -177,13 +174,12 @@
     "    else:\n",
     "        print('fail')\n",
     "    print('\\texpected ', expected)\n",
-    "    print('\\tactual   ', actual)\n",
-    "    print(count)"
+    "    print('\\tactual   ', actual)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 4,
    "id": "f05054e1-0ce3-4816-a6f8-8083501106cf",
    "metadata": {},
    "outputs": [
@@ -193,8 +189,7 @@
      "text": [
       "pass\n",
       "\texpected  YES\n",
-      "\tactual    YES\n",
-      "7\n"
+      "\tactual    YES\n"
      ]
     }
    ],
@@ -204,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 5,
    "id": "fdc83857-a358-4aab-b7c0-a7b0da3cdaea",
    "metadata": {},
    "outputs": [
@@ -214,8 +209,7 @@
      "text": [
       "pass\n",
       "\texpected  YES\n",
-      "\tactual    YES\n",
-      "12\n"
+      "\tactual    YES\n"
      ]
     }
    ],
@@ -225,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 6,
    "id": "82f91571-a318-4835-a731-c9d37629364a",
    "metadata": {},
    "outputs": [
@@ -235,8 +229,7 @@
      "text": [
       "pass\n",
       "\texpected  NO\n",
-      "\tactual    NO\n",
-      "22\n"
+      "\tactual    NO\n"
      ]
     }
    ],
@@ -246,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 7,
    "id": "a68b4b1c-5bc7-4aab-9674-d43f103ed907",
    "metadata": {},
    "outputs": [
@@ -256,8 +249,7 @@
      "text": [
       "pass\n",
       "\texpected  YES\n",
-      "\tactual    YES\n",
-      "24\n"
+      "\tactual    YES\n"
      ]
     }
    ],
@@ -284,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 8,
    "id": "8d965b7a-3df6-40cd-9e4b-93f6bc97f1c6",
    "metadata": {},
    "outputs": [],
@@ -297,7 +289,7 @@
     "def make_big_case(n):\n",
     "    s = [s_alpha[random.randint(0, len(s_alpha)-1)] for _ in range(n)]\n",
     "    s = ''.join(s)\n",
-    "    t = '***'\n",
+    "    t = '*********'\n",
     "    return  (\n",
     "        '\\n' +\n",
     "        t + '\\n' +\n",
@@ -317,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 9,
    "id": "50d50eca-6040-4ddb-8c16-6a5a6ae5e3ed",
    "metadata": {},
    "outputs": [],
@@ -331,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 10,
    "id": "245307f0-d6ea-4e15-8dfc-334a13f446f4",
    "metadata": {},
    "outputs": [],
@@ -342,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 11,
    "id": "886ebcc0-3abe-4920-b14c-bdb533e3caf7",
    "metadata": {},
    "outputs": [
@@ -353,7 +345,6 @@
       "pass\n",
       "\texpected  YES\n",
       "\tactual    YES\n",
-      "100028\n",
       "0.16 sec\n"
      ]
     }
@@ -364,15 +355,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 21,
    "id": "51a89df7-c145-4ca1-b085-21303ece784f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "count = 0 \n",
     "def solve(s, template, dp):\n",
-    "    global count\n",
-    "    count +=1\n",
     "    key = (len(s), len(template))\n",
     "    if key in dp:\n",
     "        return dp[key]\n",
@@ -381,38 +369,39 @@
     "        if template == '':\n",
     "            return True\n",
     "        else:\n",
-    "            dp[(0, len(template))] = False\n",
+    "            #dp[(0, len(template))] = False\n",
     "            return False\n",
     "\n",
     "    if template == '':\n",
     "        if s == '':\n",
     "            return True\n",
     "        else:\n",
-    "            dp[(len(s), 0)] = False\n",
+    "            #dp[(len(s), 0)] = False\n",
     "            return False\n",
-    "            \n",
+    "\n",
     "    if s[0] == template[0] or template[0] == '?':\n",
     "        result = solve(s[1:], template[1:], dp)\n",
-    "        dp[(len(s) - 1, len(template) - 1)] = result\n",
+    "        #dp[(len(s) - 1, len(template) - 1)] = result\n",
     "        return result\n",
     "\n",
     "    if template[0] == '*':\n",
     "        for j in range(len(s)+1):\n",
     "            if solve(s[j:], template[1:], dp):\n",
-    "                dp[(len(s) - j, len(template)-1)] = True\n",
+    "                #dp[(len(s) - j, len(template)-1)] = True\n",
     "                return True\n",
     "        else:\n",
-    "            dp[(len(s), len(template))] = False\n",
+    "            #dp[(len(s), len(template))] = False\n",
     "            return False\n",
     "\n",
     "def string_matches_template(s: str, template: str) -> bool:\n",
+    "    \n",
     "    result = solve(s, template, {(0,0):True})\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 22,
    "id": "46a59e36-cc4c-468e-aca8-8e7540ea2ae0",
    "metadata": {},
    "outputs": [
@@ -420,11 +409,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I am here\n",
       "pass\n",
       "\texpected  YES\n",
-      "\tactual    YES\n",
-      "7\n"
+      "\tactual    YES\n"
      ]
     }
    ],
@@ -434,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 23,
    "id": "f78358e3-4cd9-43a3-a923-466b6be793a6",
    "metadata": {},
    "outputs": [
@@ -442,11 +429,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I am here\n",
       "pass\n",
       "\texpected  YES\n",
-      "\tactual    YES\n",
-      "12\n"
+      "\tactual    YES\n"
      ]
     }
    ],
@@ -456,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 24,
    "id": "76311bd7-f19d-4dd0-ab9a-ced93f62db91",
    "metadata": {},
    "outputs": [
@@ -466,8 +451,7 @@
      "text": [
       "pass\n",
       "\texpected  NO\n",
-      "\tactual    NO\n",
-      "22\n"
+      "\tactual    NO\n"
      ]
     }
    ],
@@ -477,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 25,
    "id": "fd04cd2d-39c1-4e41-acca-b65c1bf45a32",
    "metadata": {},
    "outputs": [
@@ -485,11 +469,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I am here\n",
       "pass\n",
       "\texpected  YES\n",
-      "\tactual    YES\n",
-      "24\n"
+      "\tactual    YES\n"
      ]
     }
    ],
@@ -499,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 26,
    "id": "dbb3f53a-e4c8-4a38-85f9-56fabef2c970",
    "metadata": {},
    "outputs": [
@@ -507,12 +489,163 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I am here\n",
       "pass\n",
       "\texpected  YES\n",
       "\tactual    YES\n",
-      "100028\n",
-      "0.22 sec\n"
+      "0.17 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_big_case(big_case_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "38f129ae-be58-4f4c-b98a-8b65f80e0c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve(s, t):\n",
+    "\n",
+    "    if not s and not t:\n",
+    "        return True\n",
+    "\n",
+    "    if s and not t:\n",
+    "        return False\n",
+    "        \n",
+    "    if t[-1] == '*':\n",
+    "        for j in range(len(s)+1):\n",
+    "            if solve(s[:len(s)-j], t[:-1]):\n",
+    "                return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    if s[-1] == t[-1] or t[-1] == '?':\n",
+    "        result = solve(s[:-1], t[:-1])\n",
+    "        return result\n",
+    "\n",
+    "def string_matches_template(s: str, template: str) -> bool:\n",
+    "    \n",
+    "    result = solve(s, template)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def solve(s, t, dp):      \n",
+    "    \n",
+    "    if not s and not t:\n",
+    "        return True\n",
+    "        \n",
+    "    if s and not t:\n",
+    "        return False\n",
+    "        \n",
+    "    if t[0] == '*':\n",
+    "        for j in range(len(s)+1):\n",
+    "            #key = len(s) - j\n",
+    "            \n",
+    "            #if key not in dp:\n",
+    "            #    dp[key] = s[j:]\n",
+    "            \n",
+    "            #sj = dp[key]\n",
+    "            \n",
+    "            if solve(s[j:], t[1:], dp):\n",
+    "                return True\n",
+    "        else:\n",
+    "            return False\n",
+    "            \n",
+    "    if s[0] == t[0] or t[0] == '?':\n",
+    "        #key = len(s) - 1\n",
+    "        #if key not in dp:\n",
+    "        #    dp[key] = s[1:]\n",
+    "        #s1 = dp[key]\n",
+    "            \n",
+    "        result = solve(s[1:], t[1:], dp)\n",
+    "        return result\n",
+    "\n",
+    "def string_matches_template(s: str, template: str) -> bool:\n",
+    "    dp = {}\n",
+    "    result = solve(s, template, dp)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def solve(s, t):\n",
+    "    \n",
+    "    if not s and not t:\n",
+    "        return True\n",
+    "\n",
+    "    if s and not t:\n",
+    "        return False\n",
+    "\n",
+    "    if t[0] == '*':\n",
+    "        for j in range(len(s)+1):\n",
+    "            if solve(s[j:], t[1:]):\n",
+    "                return True\n",
+    "        else:\n",
+    "            return False\n",
+    "            \n",
+    "    if s[0] == t[0] or t[0] == '?':\n",
+    "        result = solve(s[1:], t[1:])\n",
+    "        return result\n",
+    "\n",
+    "def string_matches_template(s: str, template: str) -> bool:\n",
+    "    t =  [template[0]]\n",
+    "    for i in range(1,len(template)):\n",
+    "        if template[i] == '*' and template[i-1] == '*':\n",
+    "            continue\n",
+    "        else:\n",
+    "            t.append(template[i])\n",
+    "    \n",
+    "    result = solve(s, ''.join(t))\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "37aa51b6-20c2-4bf8-bd78-ed39d4f98780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pass\n",
+      "\texpected  YES\n",
+      "\tactual    YES\n",
+      "pass\n",
+      "\texpected  YES\n",
+      "\tactual    YES\n",
+      "pass\n",
+      "\texpected  NO\n",
+      "\tactual    NO\n",
+      "pass\n",
+      "\texpected  YES\n",
+      "\tactual    YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(cases[0])\n",
+    "test(cases[1])\n",
+    "test(cases[2])\n",
+    "test(cases[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "dc8232cf-edcd-4602-85be-d4095641478e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pass\n",
+      "\texpected  YES\n",
+      "\tactual    YES\n",
+      "0.16 sec\n"
      ]
     }
    ],
@@ -523,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f129ae-be58-4f4c-b98a-8b65f80e0c99",
+   "id": "cf1d6381-1a8d-49ea-8e04-6bc415a44c57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -531,15 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "495cc910-6cfb-4e81-b7f0-11e6da9a2b02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "352634a3-4949-4540-9d81-25168acde1e5",
+   "id": "08840b56-b1da-4fb5-8018-93679b8d41df",
    "metadata": {},
    "outputs": [],
    "source": []
